Write IDESkipMacroFingerprintValidation to YES

--- a/.github/workflows/adhoc.yml
+++ b/.github/workflows/adhoc.yml
@@ -33,6 +33,9 @@ jobs:
     - name: Write IDESkipPackagePluginFingerprintValidatation
       run: defaults write com.apple.dt.Xcode IDESkipPackagePluginFingerprintValidatation -bool YES
 
+    - name: Write IDESkipMacroFingerprintValidation
+      run: defaults write com.apple.dt.Xcode IDESkipMacroFingerprintValidation -bool YES
+
     - name: Setup app-distribution-key.json
       env:
         APP_DISTRIBUTION_KEY_BASE64: ${{ secrets.APP_DISTRIBUTION_KEY_BASE64 }}
