--- a/.github/workflows/appstore.yml
+++ b/.github/workflows/appstore.yml
@@ -36,6 +36,9 @@ jobs:
     - name: Write IDESkipPackagePluginFingerprintValidatation
       run: defaults write com.apple.dt.Xcode IDESkipPackagePluginFingerprintValidatation -bool YES
 
+    - name: Write IDESkipMacroFingerprintValidation
+      run: defaults write com.apple.dt.Xcode IDESkipMacroFingerprintValidation -bool YES
+
     - name: Setup app-store-connect-api-key.json
       env:
         APP_STORE_CONNECT_API_KEY_BASE64: ${{ secrets.APP_STORE_CONNECT_API_KEY_BASE64 }}
