Support concurrency for all Actions workflows

--- a/.github/workflows/adhoc.yml
+++ b/.github/workflows/adhoc.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - develop
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref }}
+  cancel-in-progress: true
+
 jobs:
   adhoc:
     runs-on: macos-13
