--- a/.github/workflows/appstore.yml
+++ b/.github/workflows/appstore.yml
@@ -5,6 +5,10 @@ on:
     tags:
       - "v*.*.*"
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref }}
+  cancel-in-progress: true
+
 jobs:
   appstore:
     runs-on: macos-13
