--- a/.github/workflows/appstore.yml
+++ b/.github/workflows/appstore.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Setup Ruby
       uses: ruby/setup-ruby@v1
       with:
-        ruby-version: "3.2"
+        # ruby-version: "3.2"
         bundler-cache: true
 
     - name: Cache Swift Packages
