--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,6 +45,7 @@ jobs:
               -parallel-testing-enabled=YES \
               -destination "platform=iOS Simulator,name=iPhone 15 Pro" \
               -resultBundlePath "Test-WebSocketClientPackageTests.xcresult" \
+              -clonedSourcePackagesDirPath .swiftpm \
               -disableAutomaticPackageResolution | xcpretty
 
       - uses: kishikawakatsumi/xcresulttool@v1
